--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -30,7 +30,7 @@ body {
   background-color: rgba(176, 167, 199, .4);
 }
 
-.tableTSOD {
+.tsoddScheduleList {
   width: 80%;
   height: 80%;
   padding: 10px;
