--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,7 +5,7 @@ body {
 }
 
 .wrapper {
-  height: 100vh;
+  min-height: 100vh;
   background: rgba(45,176,224,1);
   background: -moz-linear-gradient(45deg, rgba(45,176,224,1) 0%, rgba(96,40,168,1) 100%);
   background: -webkit-gradient(left bottom, right top, color-stop(0%, rgba(45,176,224,1)), color-stop(100%, rgba(96,40,168,1)));
@@ -17,8 +17,8 @@ body {
 }
 
 .home {
-  width: 80%;
-  height: 80%; 
+  width: 80vw;
+  height: 80vh; 
   padding: 10px; 
   background-color: rgba(86, 61, 124, .5);
 }
