Change tsodd schedule background

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -34,7 +34,7 @@ body {
   width: 80%;
   height: 80%;
   padding: 10px;
-  background-color: rgba(176, 167, 199, .4);
+  background-color: rgb(220, 214, 236);
 }
 
 .tableFlows {
