--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -27,7 +27,8 @@ body {
   width: 80%;
   height: 80%;
   padding: 10px;
-  background-color: rgba(176, 167, 199, .4);
+  background-color: rgb(220, 214, 236);
+  border-radius: 10px;
 }
 
 .tsoddSchedule {
@@ -35,11 +36,13 @@ body {
   height: 80%;
   padding: 10px;
   background-color: rgb(220, 214, 236);
+  border-radius: 10px;
 }
 
 .tableFlows {
-  width: 80%;
+  width: 50%;
   height: 80%;
   padding: 10px;
-  background-color: rgba(176, 167, 199, .4);
+  background-color: rgb(220, 214, 236);
+  border-radius: 10px;
 }
